--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "serve": "vue-cli-service serve",
     "build": "rimraf dist && vue-cli-service build",
     "build-lib": "rimraf dist && vue-cli-service build --target lib ./src/components/index.js",
-    "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit",
-    "test:cover": "vue-cli-service test:unit --coverage"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/plugin-transform-flow-comments": "^7.16.7",
     "@interactjs/actions": "^1.10.2",
     "@interactjs/auto-start": "^1.10.2",
     "@interactjs/dev-tools": "^1.10.2",
@@ -38,18 +37,14 @@
     "mitt": "^2.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.1",
-    "@vue/cli-plugin-eslint": "^3.4.1",
-    "@vue/cli-plugin-unit-jest": "^4.5.11",
-    "@vue/cli-service": "^4.5.10",
-    "@vue/compiler-sfc": "^3.0.5",
-    "babel-plugin-transform-flow-comments": "^6.22.0",
-    "eslint-plugin-vue": "^7.5.0",
-    "node-sass": "^4.13.0",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^10.1.1",
-    "vue": "^3.0.0",
-    "vue-jest": "^3.0.7",
-    "webpack-bundle-analyzer": "^3.9.0"
+    "@babel/eslint-parser": "^7.17.0",
+    "@vue/cli-plugin-babel": "^5.0.1",
+    "@vue/cli-plugin-eslint": "^5.0.1",
+    "@vue/cli-service": "^5.0.1",
+    "eslint-plugin-vue": "^8.5.0",
+    "rimraf": "^3.0.2",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "vue": "^3.0.0"
   }
 }
